# FIFI

./: README.md  pyproject.toml  run_fifi.bat  setup_env.bat
src/fifi_app/: __init__.py  ai.py  app.py  config.py  fundamental.py  logging_utils.py  main.py  market_data.py  risk.py  scoring.py  sentiment.py  technical.py
