[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifi-app"
version = "0.1.0"
description = "Assistant d'analyse d'investissement assisté par IA pour Windows"
authors = [
  { name = "FIFI" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.10.0",
  "PySide6>=6.6",
  "pandas>=2.1",
  "numpy>=1.26",
  "requests>=2.31",
  "pydantic>=2.5",
  "python-dateutil>=2.8",
  "rich>=13.7"
]

[project.scripts]
fifi-app = "fifi_app.main:main"
